perf:合并默认值回显功能以及解决报错